--- a/src/Componets/pages/Teachnician/timeSheetShow.module.css
+++ b/src/Componets/pages/Teachnician/timeSheetShow.module.css
@@ -1,4 +1,4 @@
-/* .success-message {
+.success-message {
     color: green;
     font-weight: bold;
     margin-top: 10px;
@@ -56,4 +56,4 @@ textarea {
 Button[type="submit"] {
   margin-top: 20px;
   width: 100%;
-} */
+}
