--- a/src/Componets/pages/Teachnician/JobAssigned.css
+++ b/src/Componets/pages/Teachnician/JobAssigned.css
@@ -6,18 +6,22 @@
       border-color: #5a8dee;
       color: #fff;
   }
-  .dt-pagination-ul {
-      display: flex;
-      align-items: center;
-      margin-bottom: 0;
-    padding-left: 0;
-    /* border-top: 1px solid #dee2e6; */
-    padding-top : 15px;
-  }
-  
+.jobcontainer.container.mt-5
+{
+    margin-left: 46px;
+    max-width: 95%;
+}  
   .dt-pagination .dt-item {
       display: inline-block;
   }
+
+  a.btn.btn-primary.btn-sm {
+    padding: 3px;
+    width: 70px;
+    height: 46px;
+    font-size: 14px;
+    font-weight: 600;
+}
   
   .dt-pagination .dt-item .dt-link {
       padding: 6px 8px;
@@ -54,3 +58,77 @@
       border-color: #5a8dee;
       color: #fff;
   }
+
+  /* Heading */
+h1.text-center {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    font-weight: 700;
+    color: #5a8dee;
+    border-bottom: 2px solid #5a8dee;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+/* Pagination */
+.dt-pagination-ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dt-item .dt-link {
+    padding: 6px 12px;
+    background-color: #5a8dee;
+    color: #fff;
+    border-radius: 4px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+
+
+/* Table Style */
+.bf-table-responsive {
+    border-radius: 6px;
+    overflow: hidden;  /* Hide overflow to respect border-radius for child elements */
+}
+.bf-table thead {
+    background-color: #428bca;
+    color: #fff;
+  }
+
+.table-bordered th, .table-bordered td {
+    border-color: #dfe3e7;
+}
+
+.table-hover tbody tr:hover {
+    background-color: #f5f5f5;
+}
+
+.btn.btn-primary.btn-sm {
+    background-color: #5a8dee;
+    border-color: #5a8dee;
+    transition: background-color 0.3s;
+}
+
+.btn.btn-primary.btn-sm:hover {
+    background-color: #0c3463;
+}
+
+
+nav.dt-pagination{
+    float: inline-end;
+    margin-top: 50px;
+}
+
+.card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    overflow: hidden;
+  }
+  
+  .card-body {
+    padding: 20px;
+  }
+  
