commit - update technician profile ui

--- a/src/Componets/pages/Teachnician/timeSheetShow.module.css
+++ b/src/Componets/pages/Teachnician/timeSheetShow.module.css
@@ -1,4 +1,4 @@
-.success-message {
+/* .success-message {
     color: green;
     font-weight: bold;
     margin-top: 10px;
@@ -58,4 +58,4 @@ Button[type="submit"] {
   width: 66%;
   font-size: 23px;
   font-weight: bold;
-}
+} */
