--- a/src/Componets/pages/Manager/Registration.css
+++ b/src/Componets/pages/Manager/Registration.css
@@ -1,72 +1,100 @@
-/* * {
-  padding: 0px;
-  text-align: center;
-}
-.container {
-  padding: 16px;
-} */
-h2 {
-  margin-top: 4px;
-  font-family: -apple-ystem, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-}
-.avatar {
-  width: 100px;
-  height: 100px;
-  vertical-align: middle;
-}
-.Registration {
-  margin: auto;
-  width: 550px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  box-sizing: border-box;
-  border: 1px solid rgba(0, 0, 0.1);
-  box-shadow: 0 5px 10px rgba(0, 0, 0.2);
-}
-input[type='text'],
-input[type='tel'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
-select {
-  width: 400px;
-  border: none;
-  padding: 12px 20px;
-  text-align: left;
-  margin: 5px 0px;
-  display: inline-block;
-  border: 1px solid blue;
-  border-radius: 5px;
-}
-input[type='Submit'] {
-  width: 300px;
-  padding: 14px 20px;
-  background-color: #4caf50;
-  border: none;
-  cursor: pointer;
-  margin-top: 20px;
-  color: #000;
-  font-weight: bold;
-  font-variant: small-caps;
-  border-radius: 1em;
-}
-input[type='Submit']:hover {
-  opacity: 0.8;
+.registerManager {
+  background: linear-gradient(
+    to right,
+    rgb(76, 172, 237) 0,
+    rgb(29, 93, 188) 100%
+      /* rgba(57, 49, 175, 1) 0,
+    rgba(0, 198, 255, 1) 100% */
+  );
+  margin-top: 3%;
+  padding: 3%;
+  overflow: hidden;
 }
 
-div label {
-  font-weight: bolder;
-  padding: 3px;
-  margin: 0px;
-  text-align: left;
+/* .register-left */
+.register-left {
+  text-align: center;
+  color: #fff; /* Replace with the appropriate color value */
+  margin-top: 4%;
 }
-select:focus,
-input[type='tel']:focus,
-input[type='text']:focus,
-input[type='email']:focus,
-input[type='password']:focus,
-input[type='date']:focus {
-  border: 2px solid blue;
+
+/* .register-left input {
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  width: 60%;
+  background: #f8f9fa; 
+  font-weight: bold;
+  color: #383d41; 
+  margin-top: 30%;
+  margin-bottom: 3%;
+  cursor: pointer;
+} */
+
+.register-left .managerImage {
+  margin-top: 15%;
+  margin-bottom: 5%;
+  width: 25%;
+  animation: mover 1s infinite alternate;
+}
+
+.register-left .paraManager {
+  font-weight: lighter;
+  padding: 12%;
+  margin-top: -9%;
+}
+
+/* .register-right */
+.register-right {
+  background: #f8f9fa; /* Replace with the appropriate color value */
+  border-top-left-radius: 10% 50%;
+  border-bottom-left-radius: 10% 50%;
+}
+
+/* Keyframes */
+@-webkit-keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+.formDiv {
+  margin-top: 130px;
+  margin-left: 50px;
+}
+/* .btnRegister */
+.btnRegister {
+  float: right;
+  margin-top: 10%;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  background: #0062cc; /* Replace with the appropriate color value */
+  color: #fff; /* Replace with the appropriate color value */
+  font-weight: 600;
+  width: 50%;
+  cursor: pointer;
+}
+
+/* .register-heading */
+.register-heading {
+  text-align: center;
+  margin-bottom: -15%;
+}
+
+@media (max-width: 991px) {
+  .register-heading {
+    font-size: 1.5rem;
+  }
 }
