commit - timsheet black

--- a/src/Componets/pages/Manager/AddTimesheetEntryForm.css
+++ b/src/Componets/pages/Manager/AddTimesheetEntryForm.css
@@ -25,7 +25,7 @@
 .form-group textarea {
   width: 100%;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 4px;
 }
 
