--- a/src/Componets/pages/Manager/Registration.css
+++ b/src/Componets/pages/Manager/Registration.css
@@ -1,10 +1,5 @@
 .registerManager {
-  background: linear-gradient(
-    to right,
-    rgb(78, 212, 165) 0,
-    rgb(12, 68, 62) 100%
-      /* rgba(57, 49, 175, 1) 0,
-    rgba(0, 198, 255, 1) 100% */
+  background:linear-gradient( to right, rgb(100 200 154) 0, #c9d841 100% 
   );
   margin-top: 3%;
   padding: 3%;
