--- a/src/Componets/pages/Manager/Registration.css
+++ b/src/Componets/pages/Manager/Registration.css
@@ -1,30 +1,15 @@
 .registerManager {
-  background:linear-gradient( to right, rgb(100 200 154) 0, #c9d841 100% 
-  );
+  background: linear-gradient(to right, rgb(100 200 154) 0, #c9d841 100%);
   margin-top: 3%;
   padding: 3%;
   overflow: hidden;
 }
 
-/* .register-left */
 .register-left {
   text-align: center;
-  color: #fff; /* Replace with the appropriate color value */
+  color: #fff;
   margin-top: 4%;
 }
-
-/* .register-left input {
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  width: 60%;
-  background: #f8f9fa; 
-  font-weight: bold;
-  color: #383d41; 
-  margin-top: 30%;
-  margin-bottom: 3%;
-  cursor: pointer;
-} */
 
 .register-left .managerImage {
   margin-top: 15%;
@@ -39,53 +24,21 @@
   margin-top: -9%;
 }
 
-/* .register-right */
 .register-right {
-  background: #f8f9fa; /* Replace with the appropriate color value */
+  background: #f8f9fa;
   border-top-left-radius: 10% 50%;
   border-bottom-left-radius: 10% 50%;
 }
 
-/* Keyframes */
-@-webkit-keyframes mover {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-20px);
-  }
-}
-
-@keyframes mover {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-20px);
-  }
-}
 .formDiv {
-  margin-top: 130px;
+  margin-top: 140px;
   margin-left: 50px;
 }
-/* .btnRegister */
-.btnRegister {
-  float: right;
-  margin-top: 10%;
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  background: #0062cc; /* Replace with the appropriate color value */
-  color: #fff; /* Replace with the appropriate color value */
-  font-weight: 600;
-  width: 50%;
-  cursor: pointer;
-}
 
-/* .register-heading */
 .register-heading {
   text-align: center;
   margin-bottom: -15%;
+  margin-top: 10px;
 }
 
 @media (max-width: 991px) {
