commit - change icon and change in projectstatus

--- a/src/Componets/pages/Manager/CreateCustomer.css
+++ b/src/Componets/pages/Manager/CreateCustomer.css
@@ -4,6 +4,9 @@
 .company-info {
   background: #86b817;
 }
+.createCustomer {
+  margin: 0 !important;
+}
 
 .contact .newCustomerForm {
   display: grid;
