commit - api integration of count

--- a/src/Componets/pages/Admin/AccountWA.css
+++ b/src/Componets/pages/Admin/AccountWA.css
@@ -39,3 +39,8 @@
     background-color: #0056b3;
   }
   
+  .button-hover-effect:hover {
+    background-color: #5ab339; /* Change this to your desired hover color */
+    transform: scale(1.05); /* This adds a zoom effect on hover */
+    transition: all 0.3s ease; /* This ensures smooth transition */
+}
