--- a/src/Componets/pages/Teachnician/Techlogin.css
+++ b/src/Componets/pages/Teachnician/Techlogin.css
@@ -1,217 +1,88 @@
-.imgdropdown.dropdown{
-    position: relative;
-    left: 90%;
-}
-.loginContainer {
-    position: relative;
-    margin: 100px auto;
-    background: #fff;
-    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 3px;
-    width: 700px;
-    max-width: 800px;
-    min-height: 480px;
-    overflow: hidden;
-}
-
-.loginAnimateWidth {
-    animation: animateWidth 0.8s linear forwards;
-}
-
-@keyframes animateWidth {
-    0% {
-        width: 35%;
-    }
-    20% {
-        width: 50%;
-    }
-    100% {
-        width: 35%;
-    }
-}
-
-.loginForm__container {
-    position: absolute;
-    z-index: -1;
+.technician-login .main-content {
+    width: 50%;
+    border-radius: 20px;
+    box-shadow: 0 5px 5px rgba(0,0,0,.4);
+    margin: 5em auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.technician-login .company__info {
+    background-color: #86B817;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    display: flex;
     flex-direction: column;
-    width: 54%;
-    padding: 25px;
-    text-align: center;
-    background: #fff;
-    transition: all 0.6s ease-in;
-}
-
-.go-login .loginForm__container-login {
-    left: 35%;
-    opacity: 0;
-}
-
-.go-register .loginForm__container-login {
-    left: 0;
-    opacity: 1;
-    z-index: 0;
-}
-
-.go-login .loginForm__container-register {
-    left: 35%;
-    opacity: 1;
-    z-index: 0;
-}
-
-.go-register .loginForm__container-register {
-    left: 0;
-    opacity: 0;
-}
-
-.loginForm {
-    width: 100%;
-}
-
-.loginForm__heading {
-    font-size: 30px;
-    margin-bottom: 15px;
-    font-weight: 800;
-}
-
-.loginForm__field {
-    width: 85%;
-    height: 35px;
-    line-height: 35px;
-    padding-left: 15px;
-    margin-bottom: 15px;
-    background: #f4f8f7;
-    border: none;
-}
-
-.loginForm__field:focus, .loginForm__field:active {
-    outline: 0;
-}
-
-.loginForm__text {
-    margin-bottom: 15px;
-    font-size: 14px;
-}
-
-.loginList {
-    padding-left: 0;
-}
-
-.loginList__inline {
-    margin-bottom: 15px;
-}
-
-.loginList__item {
-    display: inline-block;
-    margin-left: 5px;
-    margin-right: 5px;
-    border: 1px solid #333;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-
-.loginList__link {
-    color: #333;
-    text-decoration: none;
-}
-
-.loginList__icon {
-    display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100%;
-}
-
-.loginOverlay-container {
-    position: absolute;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 40%;
-    text-align: center;
-    background: #86b817;
-    transition: all 0.8s cubic-bezier(.67, .67, .34, .95);
-}
-
-.go-login .loginOverlay-container {
-    right: 65%;
-}
-
-.go-register .loginOverlay-container {
-    right: 0;
-}
-
-.loginOverlay {
-    padding: 25px;
     color: #fff;
-    position: absolute;
+}
+
+.technician-login .company__logo .fa-android {
+    font-size:3em;
+}
+
+.technician-login .login_form {
+    background-color: #fff;
+    border-top-right-radius:20px;
+    border-bottom-right-radius:20px;
+    border-top:1px solid #ccc;
+    border-right:1px solid #ccc;
+}
+
+.technician-login .form__input {
     width: 100%;
+    border:0 solid transparent;
+    border-radius: 0;
+    border-bottom: 1px solid #aaa;
+    padding: 1em .5em .5em;
+    padding-left: 2em;
+    outline: none;
+    margin: 1.5em auto;
+    transition: all .5s ease;
+    box-shadow: 0 0 5px rgba(0,80,80,.4);
+    border-radius: 4px;
 }
 
-.loginOverlay__heading {
-    font-size: 32px;
-    margin-bottom: 15px;
+.technician-login .form__input:focus {
+    border-bottom-color: #86B817;
+    box-shadow: 0 0 5px rgba(0,80,80,.4);
+    border-radius: 4px;
 }
 
-.loginOverlay__desc {
-    max-width: 230px;
-    width: 230px;
-    margin: auto;
-    margin-bottom: 15px;
-}
-
-.go-login .loginOverlay--left {
-    z-index: 99;
-    opacity: 1;
-}
-
-.go-register .loginOverlay--left {
-    opacity: 0;
-    z-index: -1;
-}
-
-.go-login .loginOverlay--right {
-    opacity: 0;
-    z-index: -1;
-}
-
-.go-register .loginOverlay--right {
-    z-index: 99;
-    opacity: 1;
-}
-
-.loginBtn {
-    padding: 10px 30px;
-    border: none;
+.technician-login .btn {
+    transition: all .5s ease;
+    width: 70%;
     border-radius: 30px;
-    font-size: 16px;
+    color:#86B817;
+    font-weight: 600;
+    background-color: #fff;
+    border: 1px solid #86B817;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
 }
 
-.loginBtn--main {
-    background: #86b817;
-    color: #fff;
+.technician-login .btn:hover, .technician-login .btn:focus {
+    background-color: #86B817;
+    color:#fff;
 }
 
-.loginBtn--main-outline {
-    border: 2px solid;
-    border-image-source: linear-gradient(45deg, #2980b9, #3498db);
-    border-image-slice: 1;
-    color: #2980b9;
+@media screen and (max-width: 640px) {
+    .technician-login .main-content {
+        width: 90%;
+    }
+    .technician-login .company__info {
+        display: none;
+    }
+    .technician-login .login_form {
+        border-top-left-radius:20px;
+        border-bottom-left-radius:20px;
+    }
 }
 
-.loginBtn:hover {
-    cursor: pointer;
+@media screen and (min-width: 642px) and (max-width:800px) {
+    .technician-login .main-content {
+        width: 70%;
+    }
 }
-
-.loginBtn:focus, .loginBtn:active {
-    outline: 0;
-}
-
 
 .error-text {
     color: red;
