commit - create project machine validation add and create customer button fix

--- a/src/Componets/pages/Manager/CreateCustomer.css
+++ b/src/Componets/pages/Manager/CreateCustomer.css
@@ -34,7 +34,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
   }
-  .animated_bounceInLeft > * {
+  /* .animated_bounceInLeft > * {
     padding: 2em;
-  }
+  } */
 }
