--- a/src/Componets/NavBar/navBar.css
+++ b/src/Componets/NavBar/navBar.css
@@ -1,14 +1,19 @@
 :root {
-    --primary: #86B817;
-    --secondary: #FE8800;
-    --light: #F5F5F5;
-    --dark: #14141F;
+  --primary: #86b817;
+  --secondary: #fe8800;
+  --light: #f5f5f5;
+  --dark: #14141f;
 }
 
 .main-nav-bar {
-    background-color: var(--primary);
+  background-color: var(--primary);
 }
 
-.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link.active {
-    color: #14141f !important;
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #14141f !important;
+}
+
+nav.bg-body-success.main-home-navbar.navbar.navbar-expand-lg.navbar-light {
+  background-color: #86b817;
 }
