--- a/src/Componets/NavBar/navtechnician.css
+++ b/src/Componets/NavBar/navtechnician.css
@@ -1,3 +1,3 @@
-nav.main-nav-bar.navbar.navbar-expand-lg.navbar-light {
-    height: 60px;
+nav.bg-body-success.tech-login-navbar.navbar.navbar-expand-lg.navbar-light {
+  background-color: #86b817;
 }
